--- a/public/forms/static/default-get.html
+++ b/public/forms/static/default-get.html
@@ -8,11 +8,13 @@
   <title>Document</title>
 </head>
 <body>
-<h1>Forms Demo</h1>
-<form action="http://localhost:9999">
-  <input name="login" placeholder="Login">
-  <input name="password" type="password" placeholder="Password">
-  <button>Login</button>
+<form action="http://localhost:9999?value=get-value" method="post" enctype="multipart/form-data">
+  <input>
+  <input name="title">
+  <input name="value">
+  <input name="value">
+  <input type="file" name="image">
+  <button>Send</button>
 </form>
 </body>
 </html>
